--- a/Lesson02-GitHub-Repo-Search/T02.02-Exercise-AddMenu/app/src/main/res/values/strings.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.02-Exercise-AddMenu/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
   limitations under the License.
   -->
 <resources>
-    <string name="app_name">Github Query</string>
-    <!--TODO (1) Add a string resource called search with the title "Search"-->
+    <string name="app_name">GitHub Query</string>
+    <string name="search">Search</string>
 </resources>
